--- a/index.html
+++ b/index.html
@@ -44,7 +44,26 @@
         
     </header>
 
-    <main></main>
+    <main>
+
+        <div class="test">
+            <div class="img_wrapper">
+                <img src="./noticias_img/hotpress.jpg" alt="" srcset="">
+            </div>
+            <div class="text_wrapper">
+                <p class="resumen">
+                    La maquina hotpress es vista en operaciones... por ultima vez.
+                    Nada hacia presagiar que aquella noche de septiembre seria la ultima en 
+                    que el regulador de fuerza seria confiable para experimentacion de 
+                    presicion. Un alumno de pregrado tuvo que migrar a la Universidad del BioBio
+                     y luego Valparaiso para no pagar un semestre extra...
+                </p>
+                <p class="fecha">Fecha arbitraria 2023</p>
+            </div>
+
+        </div>
+
+    </main>
 
 
     <script src="./particles.js"></script>
