viewing sort of extras

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="test">
             <div class="img_wrapper">
-                <img src="./noticias_img/hotpress.jpg" alt="" srcset="">
+                <img src="./noticias_img/hotpress_2.jpg" alt="" srcset="">
             </div>
             <div class="text_wrapper">
                 <p class="resumen">
@@ -58,7 +58,7 @@
                     presicion. Un alumno de pregrado tuvo que migrar a la Universidad del BioBio
                      y luego Valparaiso para no pagar un semestre extra...
                 </p>
-                <p class="fecha">Fecha arbitraria 2023</p>
+                <p class="fecha">Algun dia del 2023</p>
             </div>
 
         </div>
