most of logic here, some to add tmr

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         
     </header>
 
-    <main>
+    <main class="stage news">
 
-        <div class="test">
+        <!-- <div class="test">
             <div class="img_wrapper">
                 <img src="./noticias_img/hotpress_2.jpg" alt="" srcset="">
             </div>
@@ -60,13 +60,32 @@
                 </p>
                 <p class="fecha">Algun dia del 2023</p>
             </div>
+        </div>   -->
 
-        </div>
+        <div class="news_wrapper">
+            <!-- <div class="test">
+                <div class="img_wrapper">
+                    <img src="./noticias_img/hotpress_2.jpg" alt="" srcset="">
+                </div>
+                <div class="text_wrapper">
+                    <p class="resumen">
+                    La maquina hotpress es vista en operaciones... por ultima vez.
+                    Nada hacia presagiar que aquella noche de septiembre seria la ultima en 
+                    que el regulador de fuerza seria confiable para experimentacion de 
+                    presicion. Un alumno de pregrado tuvo que migrar a la Universidad del BioBio
+                     y luego Valparaiso para no pagar un semestre extra...
+                    </p>
+                    <p class="fecha">Algun dia del 2023</p>
+                </div>
+            </div> -->
+        </div> 
 
     </main>
 
 
     <script src="./particles.js"></script>
     <script src="./app.js"></script>
+
+    <script src="./news.js"></script> 
 </body>
 </html>
