--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
     </header>
 
-    <main class="stage news">
+    <main id="main" class="stage news">
 
         <!-- <div class="test">
             <div class="img_wrapper">
